<resources>
    <string name="app_name">GADS Leadership Mobile Application</string>
    <string name="title_activity_information">LEADERBOARD</string>


    <string name="tab_learners">Learning Leaders</string>
    <string name="tab_iq_learners">Skill IQ Leaders</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="yes">Yes</string>
</resources>