<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:orientation="vertical"
        tools:context=".views.SubmitAppActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@null"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/arrow_back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/gads" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/project_submission"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="70dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/first_name"
                            style="@style/text_input_styles"
                            android:hint="@string/first_name" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/last_name"
                            style="@style/text_input_styles"
                            android:hint="@string/last_name" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_address"
                    style="@style/text_input_styles"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/github_link"
                    style="@style/text_input_styles"
                    android:hint="@string/github_link" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_submit"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:background="@drawable/background_button"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@drawable/background_button_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
